...
  -->
<resources  xmlns:tools="http://schemas.android.com/tools">

    <!-- General terms -->
    <string formatted="false" name="stage">Stage</string>
    <string formatted="false" name="play">Play</string>
    <string formatted="false" name="settings">Settings</string>
    <string formatted="false" name="redo">Redo</string>
    <string formatted="false" name="undo">Undo</string>

    <string formatted="false" name="new_option">new…</string>
    <string formatted="false" name="edit_option">edit…</string>

    <string formatted="false" name="confirm">Confirm</string>
    <string formatted="false" name="ignore">Ignore</string>
    <string formatted="false" name="cancel">Cancel</string>
    <string formatted="false" name="save">Save</string>
    <string formatted="false" name="help">Help</string>

    <string formatted="false" name="discard">Discard</string>

    <string formatted="false" name="next">Next</string>

    <string formatted="false" name="ok">OK</string>
    <string formatted="false" name="done">Done</string>
    <string formatted="false" name="close">Close</string>

    <string formatted="false" name= "assistant">Assistant</string>

    <string formatted="false" name="yes">Yes</string>
...
    <string formatted="false" name="loading_google_exchange_code">Exchanging Google login data…</string>
    <string formatted="false" name="loading_google_login">Google login on our server is complete…</string>

    <string formatted="false" name="logout_successful">Logout successful</string>

    <string formatted="false" name="degrees">degrees</string>
    <string formatted="false" name="background">Background</string>
    <string formatted="false" name="landscape">landscape</string>
    <string formatted="false" name="portrait">portrait</string>
    <string formatted="false" name="unknown">unknown</string>
    <string formatted="false" name="disconnect">Disconnect</string>
    <!--  -->

...

    <!-- NFC activity -->
    <string formatted="false" name="nfc_activity_title">NFC tags</string>

    <!-- Settings activity -->
    <string formatted="false" name="preference_title">Settings</string>
    <string formatted="false" name="preference_title_language">Language</string>
    <string formatted="false" name="preference_description_language">Set the app\'s language</string>

    <string formatted="false" name="preference_title_web_access">Web access</string>
    <string formatted="false" name="preference_description_web_access">Edit to add or remove trusted domains</string>
    <string formatted="false" name="preference_screen_web_access_title">Edit trusted domains</string>

...
    <string formatted="false" name="wtf_error">An unexpected error occurred: I could not restore the sample project.</string>

    <!-- Project Handling Errors -->
    <string formatted="false" name="error_copy_project">An error occurred while copying project</string>

    <!-- Dialog Errors -->
    <string formatted="false" name="name_already_exists">This name is already in use, please choose another one.</string>
    <string formatted="false" name="name_consists_of_spaces_only">You only put spaces into the text field, please enter a text
        using letters, numbers or other special characters.</string>
    <string formatted="false" name="name_empty">Please enter a text</string>

    <!-- Recycler View -->
    <string formatted="false" name="am_empty_list">There are no items in this list yet. Please add some first.</string>
...
    <string formatted="false" name="actor_object_title">Actors and Objects</string>
    <string formatted="false" name="pack">Pack</string>
    <string formatted="false" name="unpack">Unpack</string>
    <!--  -->

    <!-- NewProjectDialog -->
    <string name="new_project_title">Create project</string>
    <string name="new_project_dialog_portrait">Portrait</string>
    <string name="new_project_dialog_landscape">Landscape</string>
    <string name="new_project_dialog_cast">Cast</string>
    <!--  -->

    <!-- NewMergedProjectDialog -->
...
    <string formatted="false" name="formula_editor_function_index_of_item">item\'s index</string>
    <string formatted="false" name="formula_editor_function_index_of_item_parameter">(1,*list name*)</string>
    <string formatted="false" name="formula_editor_function_number_of_items">number of items</string>
    <string formatted="false" name="formula_editor_function_number_of_items_parameter">(*list name*)</string>
    <string formatted="false" name="formula_editor_function_flatten">flatten</string>
    <string formatted="false" name="formula_editor_function_flatten_parameter">(*list name*)</string>
    <string formatted="false" name="formula_editor_function_collision">touches actor or object</string>
    <string formatted="false" name="formula_editor_function_collides_with_edge">touches edge</string>
    <string formatted="false" name="formula_editor_function_touched">touches finger</string>
    <string formatted="false" name="formula_editor_function_collides_with_color">touches color</string>
    <string formatted="false" name="formula_editor_function_collides_with_color_parameter" translatable="false">(\'#ff0000\')</string>
    <string formatted="false" name="formula_editor_function_color_touches_color">color touches color</string>
    <string formatted="false" name="formula_editor_function_color_touches_color_parameter" translatable="false">(\'#ff0000\',\'#00ff00\')</string>
...
    <string formatted="false" name="cast_error_cast_bricks_in_no_cast_project">Your project uses Chromecast bricks and can\'t be started
        locally</string>
    <string formatted="false" name="cast_device_selector_dialog_title">Cast to</string>
    <string formatted="false" name="cast_button_menu_item_title">Cast button</string>
    <string formatted="false" name="cast_ready_to_cast">Ready to cast to</string>
    <string formatted="false" name="cast_enable_cast_feature">Chromecast features disabled. Please enable cast features in the settings.</string>
    <string formatted="false" name="cast_searching_for_cast_devices">Searching for Chromecast devices</string>
    <string formatted="false" name="cast_trouble_finding_devices_tip">.\nDon\'t see your device? Try turning your device\'s Wifi off
        and on.</string>
    <string formatted="false" name="cast_connection_timout_msg">Connection timeout. Please try again.</string>
    <string formatted="false" name="cast_screen_pause_text">Paused</string>
    <!-- -->

...
